--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
             </div>
             <div class="addNumber">
                 <textarea class="textArea" placeholder="Enter a number"></textarea>
+                <br>
                 <button class="button">Add number</button>
             </div>
         </div>
